(raf) Screens are classes now. If going back and forth between screens, they will retain their state.
(sandberg) Added support for taking screenshots. Use the Hold button to take a screenshot. When the LED
stops flashing the screenshot is stored in the Screenshots folder (you need to create that folder, if you
don't have it already).
(sandberg) Added support repeated and long key presses. The repeated key presses are usefull when navigating
the playlists.
(sandberg) Moved the screenshot function to be activated on a long key press on Select (appr. 1 second). The
screenshot will be taken when releasing the button.

0.36-pre4 (r427)
(raf) Enabled the CPU speed change option.
(raf) Added 111MHz; which is not useful for MP3, but works for OGGs in the text ui, and can save battery.
(raf) Refactored PSPApp/PSPRadio so that it runs in USERMODE. The drivers for the network and USB are now started from a kernel thread during app construction.
This allows for DHCP to work! (thanks to PspPet and 'benji' for figuring this out.)
(raf) L and R now navigate like Page UP/Down.

0.36-pre3 (r422)
(raf) Started adding SHOUTcast support
(sandberg) Implemented a VRAM memory manager, so all textures are now loaded from files
into VRAM.
(sandberg) Added full playlist and playlist entries support for the 3D UI.
(sandberg) made 2 minor error correction to the option menu.
(sandberg) Added rendering of the background effect to the option menu.
(jpfouch48) Re-vamped Grapics UI Theme class
(jpfouch48) Cleaned up theme implementation and theme file
(jpfouch48) Created icons for buffer display, network status, and stream status
(sandberg) Implemented support for using the Select(raf: changed to Start) button for entering the option menu.
The triangle button is only used for swapping between the playlist and Shoutcast list.
(raf) Now user needs to press X or O to go from playlist selection over to entries box.
(raf) Fixed crash on exit when logging is 80 or higher.